# farsi-tts

./: .gitignore  README.md  pyproject.toml
docs/: generation-params.md  index.html  model.md
input/: sample_fa.txt  samples.json  samples_en.json
models/: README.md
src/: download_model.py  download_piper_voice.py  generate.py
src/models/: __init__.py  base.py  chatterbox_model.py  fish_model.py  melo_model.py  piper_model.py  xtts_model.py
